# ez-pdf

./: .gitignore  Cargo.toml  LICENSE  PROMPT.md  README.md  progress.md  ralph-loop.sh  settings.local.json  task_plan.md
.github/workflows/: ci.yml  release.yml
docs/: user-manual.md
docs/benchmarks/: baseline.md
docs/brainstorms/: 2026-03-12-pdf-cli-tool-brainstorm.md  2026-03-14-desktop-app-brainstorm.md  2026-03-15-page-grid-ui-brainstorm.md
docs/plans/: 2026-03-12-001-feat-ezpdf-cli-tool-plan.md  2026-03-13-001-feat-ezpdf-backlog-phases-plan.md  (+3 more)
ezpdf-app/: Cargo.toml  tauri.conf.json
ezpdf-app/capabilities/: default.json
ezpdf-app/frontend/: index.html  package.json  vite.config.ts  vitest.config.ts
ezpdf-app/frontend/src/: App.svelte  App.test.ts
ezpdf-app/frontend/src/components/: DropZone.svelte  DropZone.test.ts  FileList.svelte  FileList.test.ts  OptionsPanel.svelte  OptionsPanel.test.ts  PageGrid.svelte  PageGrid.test.ts  ProgressBar.svelte  ProgressBar.test.ts  Sidebar.svelte  Sidebar.test.ts
ezpdf-app/frontend/src/lib/: dialog.ts  dnd.test.ts  dnd.ts  tauri.ts
ezpdf-app/icons/: icon.icns
ezpdf-app/src/: commands.rs  lib.rs  main.rs
ezpdf-cli/: Cargo.toml
ezpdf-cli/src/: main.rs  output.rs
ezpdf-cli/src/commands/: bookmarks.rs  completions.rs  images.rs  info.rs  merge.rs  meta.rs  mod.rs  optimize.rs  remove.rs  reorder.rs  rotate.rs  split.rs  watermark.rs
ezpdf-cli/tests/: batch_cli_tests.rs  bookmarks_cli_tests.rs  cli_polish_tests.rs  encrypted_cli_tests.rs  images_cli_tests.rs  info_cli_tests.rs  merge_cli_tests.rs  meta_cli_tests.rs  optimize_cli_tests.rs  password_cli_tests.rs  remove_cli_tests.rs  reorder_cli_tests.rs  rotate_cli_tests.rs  split_cli_tests.rs  watermark_cli_tests.rs
ezpdf-core/: Cargo.toml
ezpdf-core/benches/: operations.rs
ezpdf-core/src/: batch.rs  bookmarks.rs  error.rs  images.rs  info.rs  lib.rs  merge.rs  metadata.rs  optimize.rs  page_range.rs  remove.rs  reorder.rs  rotate.rs  split.rs  watermark.rs
ezpdf-core/tests/: batch_tests.rs  bookmark_tests.rs  generate_fixtures.rs  images_tests.rs  info_tests.rs  load_tests.rs  merge_tests.rs  metadata_tests.rs  optimize_tests.rs  remove_tests.rs  reorder_tests.rs  rotate_tests.rs  split_tests.rs  watermark_tests.rs
ezpdf-core/tests/common/: mod.rs
