[workspace]
resolver = "2"
members = [
    "ezpdf-core",
    "ezpdf-cli",
    "ezpdf-app",
]

[workspace.dependencies]
lopdf = "0.31"
thiserror = "2"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
clap_complete = "4"
clap_mangen = "0.2"
indicatif = "0.17"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
criterion = { version = "0.5", features = ["html_reports"] }
