[package]
name = "ezpdf-app"
version = "0.1.0"
edition = "2021"
description = "Desktop app for ezpdf (Tauri v2 + Svelte 5)"
license = "MIT"

[dependencies]
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
ezpdf-core = { path = "../ezpdf-core" }

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tauri = { version = "2", features = ["test"] }
tempfile = "3"
lopdf = { workspace = true }
